# osp-component-dashboard

./: README.md  config.yaml  pyproject.toml
.github/workflows/: generate.yml  scan.yml
data/: index.html  npm-vulns.json  vulns.json
src/osp_dashboard/: __init__.py  cli.py  config.py
src/osp_dashboard/collector/: __init__.py  cve.py  gomod.py  govulncheck.py  hack.py  npm.py  npmaudit.py
src/osp_dashboard/web/: __init__.py  generator.py
src/osp_dashboard/web/templates/: index.html
tests/: __init__.py  test_gomod.py  test_hack.py
