[project]
name = "osp-dashboard"
version = "0.1.0"
description = "OSP Component Version Dashboard - displays Go versions and dependencies across OSP releases"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyyaml",
    "jinja2",
]

[project.scripts]
osp-dashboard = "osp_dashboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osp_dashboard"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "config.yaml",
]

[dependency-groups]
dev = [
    "pytest",
]
